--- a/index.html
+++ b/index.html
@@ -44,9 +44,11 @@
   <!--classes on body set to work with mt-auto on footer to ensure it always stays at the bottom of page-->
   <body class="d-flex flex-column min-vh-100">
     <!--Navigation-->
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav id="nav-bar"class="navbar navbar-expand-lg "data-bs-theme="dark">
       <div class="container-fluid">
-        <a class="navbar-brand" href="index.html">Navbar</a>
+        <a class="navbar-brand" href="index.html">
+            <img src="assets/images/logo-sm-white.png" alt="Bordwalk games logo" class="logo">
+        </a>
         <button
           class="navbar-toggler"
           type="button"
