finishing styling the serviece section

--- a/game-library.html
+++ b/game-library.html
@@ -88,7 +88,7 @@
             Discover new games to rent or buy
           </h2>
           <p class="my-4">
-            paragraph text: Dive into a world of adventure, strategy, and fun
+            Dive into a world of adventure, strategy, and fun
             with our carefully curated collection of board games to rent or buy.
             From timeless classics to the latest sensations, our shelves are
             packed with games waiting to be discovered.
