complete new-game and favorite -game section in game-library page

--- a/game-library.html
+++ b/game-library.html
@@ -45,40 +45,51 @@
   <!--classes on body set to work with mt-auto on footer to ensure it always stays at the bottom of page-->
   <body class="d-flex flex-column min-vh-100">
     <!--Navigation-->
-    <div><nav id="nav-bar"class="navbar navbar-expand-lg "data-bs-theme="dark">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="index.html">
-            <img src="assets/images/logo-sm-white.png" alt="Bordwalk games logo" class="logo">
-        </a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarNav"
-          aria-controls="navbarNav"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav ms-auto">
-            <li class="nav-item">
-              <a class="nav-link " href="index.html">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Servieces</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active"aria-current="page"  href="game-library.html">Games</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link " href="#">Contact</a>
-            </li>
-          </ul>
+    <div>
+      <nav id="nav-bar" class="navbar navbar-expand-lg" data-bs-theme="dark">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="index.html">
+            <img
+              src="assets/images/logo-sm-white.png"
+              alt="Bordwalk games logo"
+              class="logo"
+            />
+          </a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNav"
+            aria-controls="navbarNav"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto">
+              <li class="nav-item">
+                <a class="nav-link" href="index.html">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Servieces</a>
+              </li>
+              <li class="nav-item">
+                <a
+                  class="nav-link active"
+                  aria-current="page"
+                  href="game-library.html"
+                  >Games</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Contact</a>
+              </li>
+            </ul>
+          </div>
         </div>
-      </div>
-    </nav></div>
+      </nav>
+    </div>
     <!--header with crousel-->
     <header class="container">
       <div class="row">
@@ -88,10 +99,10 @@
             Discover new games to rent or buy
           </h2>
           <p class="my-4">
-            Dive into a world of adventure, strategy, and fun
-            with our carefully curated collection of board games to rent or buy.
-            From timeless classics to the latest sensations, our shelves are
-            packed with games waiting to be discovered.
+            Dive into a world of adventure, strategy, and fun with our carefully
+            curated collection of board games to rent or buy. From timeless
+            classics to the latest sensations, our shelves are packed with games
+            waiting to be discovered.
           </p>
         </div>
         <div class="col-12 col-xl-6">
@@ -161,22 +172,157 @@
     <!--main elemnt to hold all the key section of the home page-->
     <main>
       <!--Gaming section-->
-      <section class="container">
+      <section id="new-games" class="container section">
         <div class="row">
-          <div class="col-12">New Games section heading</div>
-          <div class="col-12 col-md-6 col-xl-3">Game card</div>
-          <div class="col-12 col-md-6 col-xl-3">Game card</div>
-          <div class="col-12 col-md-6 col-xl-3">Game card</div>
-          <div class="col-12 col-md-6 col-xl-3">Game card</div>
+          <div class="col-12 text-center">
+            <h2 class="display-6">New games</h2>
+          </div>
+          <div class="col-12 col-md-6 col-xl-3">
+            <div class="card">
+              <img
+                class="card-img-top"
+                src="assets/images/new-games-1.webp"
+                alt="Galaxy Pioneers board game"
+              />
+              <div class="card-body">
+                <h3 class="card-title sub-heading-color">Galaxy Pioneers</h3>
+                <p class="card-text">
+                  SUtilise resources wisely, negotiate with alien species, and
+                  navigate cosmic events to expand your interstellar empire.
+                </p>
+                <p><em>Number of players:</em> 2-4</p>
+                <p><em>Ages:</em> 12+</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-md-6 col-xl-3">
+            <div class="card">
+              <img
+                class="card-img-top"
+                src="assets/images/new-games-2.webp"
+                alt="Mystic Woods board game box"
+              />
+              <div class="card-body">
+                <h3 class="card-title sub-heading-color">Mystic Woods</h3>
+                <p class="card-text">
+                  Enter the enchanted forest of Mystic Woods. Combine spells,
+                  gather mystical creatures, and solve puzzles to protect the
+                  realm.
+                </p>
+                <p><em>Number of players: </em> 1-6</p>
+                <p><em>Ages: </em> 10+</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-md-6 col-xl-3">
+            <div class="card">
+              <img
+                class="card-img-top"
+                src="assets/images/new-games-3.webp"
+                alt=" Captain's Gambit board game box"
+              />
+              <div class="card-body">
+                <h3 class="card-title sub-heading-color">Captain's Gambit</h3>
+                <p class="card-text">
+                  Engage in battles, form fleeting alliances, and navigate
+                  treacherous waters to become the most feared pirate of them
+                  all.
+                </p>
+                <p><em>Number of players:</em> 3-4</p>
+                <p><em>Ages:</em>14+</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-md-6 col-xl-3">
+            <div class="card">
+              <img
+                class="card-img-top"
+                src="assets/images/new-games-4.webp"
+                alt=" Critter Quest board game box"
+              />
+              <div class="card-body">
+                <h3 class="card-title sub-heading-color"> Critter Quest</h3>
+                <p class="card-text">
+                  Solve simple puzzles, collect magical gems, and help friends along the way in this heartwarming journey of discovery and friendship.
+                </p>
+                <p><em>Number of players:</em>2-4</p>
+                <p><em>Ages:</em> 5+</p>
+              </div>
+            </div>
+          </div>
         </div>
       </section>
-      <section class="container">
+      <section id="fav-games" class="container section">
         <div class="row">
-          <div class="col-12">Favourite gamie section heading</div>
-          <div class="col-12 col-md-6 col-xl-3">Game card</div>
-          <div class="col-12 col-md-6 col-xl-3">Game card</div>
-          <div class="col-12 col-md-6 col-xl-3">Game card</div>
-          <div class="col-12 col-md-6 col-xl-3">Game card</div>
+          <div class="col-12">
+            <h2>Favourites</h2>
+          </div>
+          <div class="col-12 col-md-6 col-xl-3"> 
+            <div class="card">
+              <img
+                class="card-img-top"
+                src="assets/images/fav-games-1.webp"
+                alt="Settlers of Catan board game"
+              />
+              <div class="card-body">
+                <h3 class="card-title sub-heading-color">Settlers of Catan</h3>
+                <p class="card-text">
+                  Picture yourself in the era of discoveries: after a long voyage of great deprivation, your ships have finally reached the coast of an uncharted island.
+                </p>
+                <p><em>Number of players:</em>3-4</p>
+                <p><em>Ages:</em> 10+</p>
+              </div>
+            </div>
+        </div>
+          <div class="col-12 col-md-6 col-xl-3"> 
+            <div class="card">
+              <img
+                class="card-img-top"
+                src="assets/images/fav-games-2.webp"
+                alt=" Monopoly board game"
+              />
+              <div class="card-body">
+                <h3 class="card-title sub-heading-color">Monopoly</h3>
+                <p class="card-text">
+                  Featuring classic Monopoly gameplay, this favourite family board game is all about buying, selling, and trading properties to win.
+                </p>
+                <p><em>Number of players:</em>2-6</p>
+                <p><em>Ages:</em> 8+</p>
+              </div>
+            </div></div>
+          <div class="col-12 col-md-6 col-xl-3">
+             <div class="card">
+              <img
+                class="card-img-top"
+                src="assets/images/fav-games-3.webp"
+                alt="Exploding Kittens card game"
+              />
+              <div class="card-body">
+                <h3 class="card-title sub-heading-color">Exploding Kittens</h3>
+                <p class="card-text">
+                  Exploding Kittens is a kitty-powered version of Russian Roulette. Players take turns drawing cards until someone draws an exploding kitten card and loses the game!
+                </p>
+                <p><em>Number of players:</em>2-5</p>
+                <p><em>Ages:</em> 7+</p>
+              </div>
+            </div></div>
+          <div class="col-12 col-md-6 col-xl-3">
+            <div class="card">
+              <img
+                class="card-img-top"
+                src="assets/images/fav-games-4.webp"
+                alt="Cluedo board game"
+              />
+              <div class="card-body">
+                <h3 class="card-title sub-heading-color">Cluedo</h3>
+                <p class="card-text">
+                  The classic game of mystery and suspense. Cluedo has 6 suspects, 6 weapons and also a whole maze of possible murder scenes to explore. It's up to you to question the suspects and crack the case.
+                </p>
+                <p><em>Number of players:</em>2-6</p>
+                <p><em>Ages:</em> 8+</p>
+              </div>
+            </div>
+        </div>
         </div>
       </section>
     </main>
