--- a/index.html
+++ b/index.html
@@ -203,12 +203,28 @@
     </main>
     <!--footer or contact section-->
     <!--mt-auto to push footer to bottom of the page-->
-    <footer class="mt-auto">
-      <div class="container">
+    <footer id="contact" class="mt-auto">
+      <div class="container section">
         <div class="row justify-content-center">
-          <div class="col-12">Contact Section</div>
+          <div class="col-12 text-center">
+            <h2 class="display-6">Contact Us!</h2>
+          </div>
           <!--contact info-->
-          <div class="col-12 col-md-6 col-xl-4">contact and social network</div>
+          <div class="col-12 col-md-6 col-xl-4">
+            <h3 class="sub-heading-color">Contact info</h3>
+            <address>
+              <strong><i class="fa-solid fa-location-dot"></i>Boardwalk Games</strong><br>
+              123 Boardwalk<br>
+              Boardwalk City,12345
+            </address>
+            <p><i class="fa-solid fa-phone"></i>012 345 6789 <br>
+            <i class="fa-solid fa-paper-plane"></i>info@boardwalk-games.co</p>
+            <div class="social-links mt-4">
+              <a href="https://www.instagram.com/" target="_blank" aria-label="instagaram home page" rel="noopener"><i class="fa-brands fa-instagram"></i></a>
+              <a href="https://www.facebook.com/" target="_blank "aria-label="facebbok home page" rel="noopener"><i class="fa-brands fa-facebook"></i></a>
+              <a href="https://x.com/" target="_blank" aria-label="twitter home page" rel="noopener"><i class="fa-brands fa-x-twitter"></i></a>
+            </div>
+          </div>
           <!--opening times-->
           <div class="col-12 col-md-6 col-xl-4">opening times</div>
         </div>
