Style the contact section

--- a/game-library.html
+++ b/game-library.html
@@ -83,7 +83,7 @@
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Contact</a>
+                <a class="nav-link" href="index.html#contact">Contact</a>
               </li>
             </ul>
           </div>
@@ -328,14 +328,85 @@
     </main>
     <!--footer or contact section-->
     <!--mt-auto to push footer to bottom of the page-->
-    <footer class="mt-auto">
-      <div class="container">
+    <footer id="contact" class="mt-auto">
+      <div class="container section">
         <div class="row justify-content-center">
-          <div class="col-12">Contact Section</div>
+          <div class="col-12 text-center">
+            <h2 class="display-6">Contact Us!</h2>
+          </div>
           <!--contact info-->
-          <div class="col-12 col-md-6 col-xl-4">contact and social network</div>
+          <div class="col-12 col-md-6 col-xl-4">
+            <h3 class="sub-heading-color">Contact info</h3>
+            <address>
+              <strong
+                ><i class="fa-solid fa-location-dot"></i>Boardwalk Games</strong
+              ><br />
+              123 Boardwalk<br />
+              Boardwalk City,12345
+            </address>
+            <p>
+              <i class="fa-solid fa-phone"></i>012 345 6789 <br />
+              <i class="fa-solid fa-paper-plane"></i>info@boardwalk-games.co
+            </p>
+            <div class="social-links my-4">
+              <a
+                href="https://www.instagram.com/"
+                target="_blank"
+                aria-label="instagaram home page"
+                rel="noopener"
+                ><i class="fa-brands fa-instagram"></i
+              ></a>
+              <a
+                href="https://www.facebook.com/"
+                target="_blank "
+                aria-label="facebbok home page"
+                rel="noopener"
+                ><i class="fa-brands fa-facebook"></i
+              ></a>
+              <a
+                href="https://x.com/"
+                target="_blank"
+                aria-label="twitter home page"
+                rel="noopener"
+                ><i class="fa-brands fa-x-twitter"></i
+              ></a>
+            </div>
+          </div>
           <!--opening times-->
-          <div class="col-12 col-md-6 col-xl-4">opening times</div>
+          <div class="col-12 col-md-6 col-xl-4">
+            <h3 class="sub-heading-color">Opening times</h3>
+            <table class="table table-dark">
+              <thead>
+                <tr>
+                  <th scope="col">Day</th>
+                  <th scope="col">Open</th>
+                  <th scope="col">Close</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <th scope="row">Mon</th>
+                  <td colspan="2">Closed</td>
+                  
+                </tr>
+                <tr>
+                  <th scope="row">Tue - Thur</th>
+                  <td>11am</td>
+                  <td>11pm</td>
+                </tr>
+                <tr>
+                  <th scope="row">Fri - Sat</th>
+                  <td>11am</td>
+                  <td>12am</td>
+                </tr>
+                <tr>
+                  <th scope="row">Sun</th>
+                  <td>12pm</td>
+                  <td>7pm</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
         </div>
       </div>
     </footer>
