--- a/index.html
+++ b/index.html
@@ -44,10 +44,14 @@
   <!--classes on body set to work with mt-auto on footer to ensure it always stays at the bottom of page-->
   <body class="d-flex flex-column min-vh-100">
     <!--Navigation-->
-    <nav id="nav-bar"class="navbar navbar-expand-lg "data-bs-theme="dark">
+    <nav id="nav-bar" class="navbar navbar-expand-lg" data-bs-theme="dark">
       <div class="container-fluid">
         <a class="navbar-brand" href="index.html">
-            <img src="assets/images/logo-sm-white.png" alt="Bordwalk games logo" class="logo">
+          <img
+            src="assets/images/logo-sm-white.png"
+            alt="Bordwalk games logo"
+            class="logo"
+          />
         </a>
         <button
           class="navbar-toggler"
@@ -63,7 +67,9 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+              <a class="nav-link active" aria-current="page" href="index.html"
+                >Home</a
+              >
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Servieces</a>
@@ -72,53 +78,103 @@
               <a class="nav-link" href="game-library.html">Games</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link " href="#">Contact</a>
+              <a class="nav-link" href="#contact">Contact</a>
             </li>
           </ul>
         </div>
       </div>
     </nav>
     <!--header with crousel-->
-    <header id="header"class="container section">
+    <header id="header" class="container section">
       <div class="row">
         <div class="col-12 col-xl-6 text-center text-xl-start">
-            <h1 class="display-3">Boardwalk Games</h1>
-            <p class="lead display-6 sub-heading-color">Your next adventure is waiting!</p>
-            <p class="my-4">Welcome to Boardwalk Games, Your Ultimate Gaming Getaway! Escape into the world of board games and café delights. Whether you're a casual gamer seeking a cosy nook to unwind, a board game enthusiast ready for your next challenge, or a student gamer looking for a fun, affordable hangout, we've got you covered.</p>
+          <h1 class="display-3">Boardwalk Games</h1>
+          <p class="lead display-6 sub-heading-color">
+            Your next adventure is waiting!
+          </p>
+          <p class="my-4">
+            Welcome to Boardwalk Games, Your Ultimate Gaming Getaway! Escape
+            into the world of board games and café delights. Whether you're a
+            casual gamer seeking a cosy nook to unwind, a board game enthusiast
+            ready for your next challenge, or a student gamer looking for a fun,
+            affordable hangout, we've got you covered.
+          </p>
         </div>
         <div class="col-12 col-xl-6">
-               <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
-                <div class="carousel-inner">
-                    <div class="carousel-item active active">
-                        <img src="assets/images/boardwalk-games-carousel-image-1.webp" class="d-block w-100" alt="The inside of Boardwalk Games with bookshelves filled with boardgames, and wooden tables to play at">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="assets/images/boardwalk-games-carousel-image-2.webp" class="d-block w-100" alt="The inside of Boardwalk Games with bookshelves filled with boardgames, and wooden tables to play at">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="assets/images/boardwalk-games-carousel-image-3.webp" class="d-block w-100" alt="The inside of Boardwalk Games with bookshelves filled with boardgames, and wooden tables to play at">
-                    </div>
-                    <div class="carousel-item active">
-                        <img src="assets/images/boardwalk-games-carousel-image-4.webp" class="d-block w-100" alt="The inside of Boardwalk Games with bookshelves filled with boardgames, and wooden tables to play at">
-                    </div>
-                    <div class="carousel-item active">
-                        <img src="assets/images/boardwalk-games-carousel-image-5.webp" class="d-block w-100" alt="The inside of Boardwalk Games with bookshelves filled with boardgames, and wooden tables to play at">
-                    </div>
-                    <div class="carousel-item active">
-                        <img src="assets/images/boardwalk-games-carousel-image-6.webp" class="d-block w-100" alt="The inside of Boardwalk Games with bookshelves filled with boardgames, and wooden tables to play at">
-                    </div>
-                </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
-                    data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying"
-                    data-bs-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Next</span>
-                </button>
+          <div
+            id="carouselExampleAutoplaying"
+            class="carousel slide"
+            data-bs-ride="carousel"
+          >
+            <div class="carousel-inner">
+              <div class="carousel-item active active">
+                <img
+                  src="assets/images/boardwalk-games-carousel-image-1.webp"
+                  class="d-block w-100"
+                  alt="The inside of Boardwalk Games with bookshelves filled with boardgames, and wooden tables to play at"
+                />
+              </div>
+              <div class="carousel-item">
+                <img
+                  src="assets/images/boardwalk-games-carousel-image-2.webp"
+                  class="d-block w-100"
+                  alt="The inside of Boardwalk Games with bookshelves filled with boardgames, and wooden tables to play at"
+                />
+              </div>
+              <div class="carousel-item">
+                <img
+                  src="assets/images/boardwalk-games-carousel-image-3.webp"
+                  class="d-block w-100"
+                  alt="The inside of Boardwalk Games with bookshelves filled with boardgames, and wooden tables to play at"
+                />
+              </div>
+              <div class="carousel-item active">
+                <img
+                  src="assets/images/boardwalk-games-carousel-image-4.webp"
+                  class="d-block w-100"
+                  alt="The inside of Boardwalk Games with bookshelves filled with boardgames, and wooden tables to play at"
+                />
+              </div>
+              <div class="carousel-item active">
+                <img
+                  src="assets/images/boardwalk-games-carousel-image-5.webp"
+                  class="d-block w-100"
+                  alt="The inside of Boardwalk Games with bookshelves filled with boardgames, and wooden tables to play at"
+                />
+              </div>
+              <div class="carousel-item active">
+                <img
+                  src="assets/images/boardwalk-games-carousel-image-6.webp"
+                  class="d-block w-100"
+                  alt="The inside of Boardwalk Games with bookshelves filled with boardgames, and wooden tables to play at"
+                />
+              </div>
             </div>
+            <button
+              class="carousel-control-prev"
+              type="button"
+              data-bs-target="#carouselExampleAutoplaying"
+              data-bs-slide="prev"
+            >
+              <span
+                class="carousel-control-prev-icon"
+                aria-hidden="true"
+              ></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button
+              class="carousel-control-next"
+              type="button"
+              data-bs-target="#carouselExampleAutoplaying"
+              data-bs-slide="next"
+            >
+              <span
+                class="carousel-control-next-icon"
+                aria-hidden="true"
+              ></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
         </div>
       </div>
     </header>
@@ -128,76 +184,85 @@
       <section id="serviece" class="container section">
         <div class="row">
           <div class="col-12 text-center">
-    <h2 class="display-6">Services</h2>
-</div>
-<div class="col-12 col-md-6 col-xl-3">
-    <div class="card">
-        <img src="assets/images/services-1.webp" class="card-img-top"
-            alt="Boardwalk games cafe table by a window, stacks of boardgames can be seen on the table" >
-        <div class="card-body">
-            <h3 class="card-title sub-heading-color">Play in our cafe</h3>
-            <p class="card-text">
-                Enjoy a relaxing atmosphere while diving into exciting board
-                games with friends. Indulge in our cosy café offerings, from
-                aromatic coffees to savory snacks.
-            </p>
-        </div>
-        <div class="card-footer">
-            <p class="mb-0">€7 per person</p>
-        </div>
-    </div>
-</div>
-<div class="col-12 col-md-6 col-xl-3">
-    <div class="card">
-        <img src="assets/images/services-2.webp" class="card-img-top"
-            alt="Board games stacked in bookshelves, a man can be seen browsing the shelves" />
-        <div class="card-body">
-            <!-- bootstrap cards come as h5 by default, changed to h3 to fit project heading hierarchy -->
-            <h3 class="card-title sub-heading-color">Game library</h3>
-            <p class="card-text">
-                Explore our collection of board games, ranging from classic
-                favorites to the latest releases. Find the perfect game for
-                any age, skill level, or interest.
-            </p>
-        </div>
-        <div class="card-footer">
-            <p class="mb-0">See prices in store</p>
-        </div>
-    </div>
-</div>
-<div class="col-12 col-md-6 col-xl-3">
-    <div class="card">
-        <img src="assets/images/services-3.webp" class="card-img-top">
-        <div class="card-body">
-            <h3 class="card-title sub-heading-color">Events</h3>
-            <p class="card-text">
-                Join us for special game nights, tournaments, and themed
-                events. A great opportunity to meet new people and test your
-                gaming skills.
-            </p>
-        </div>
-        <div class="card-footer">
-            <p class="mb-0">From €5 per person</p>
-        </div>
-    </div>
-</div>
-<div class="col-12 col-md-6 col-xl-3">
-    <div class="card">
-        <img src="assets/images/services-4.webp" class="card-img-top"
-            alt="A kids party being held at Boardwalk Games" >
-        <div class="card-body">
-            <h3 class="card-title sub-heading-color">Kids parties</h3>
-            <p class="card-text">
-                Celebrate your child's special day with us! We offer fun,
-                game-filled party packages that are sure to delight young
-                gamers and their friends.
-            </p>
-        </div>
-        <div class="card-footer">
-            <p class="mb-0">From €7 per child</p>
-        </div>
-    </div>
-</div>
+            <h2 class="display-6">Services</h2>
+          </div>
+          <div class="col-12 col-md-6 col-xl-3">
+            <div class="card">
+              <img
+                src="assets/images/services-1.webp"
+                class="card-img-top"
+                alt="Boardwalk games cafe table by a window, stacks of boardgames can be seen on the table"
+              />
+              <div class="card-body">
+                <h3 class="card-title sub-heading-color">Play in our cafe</h3>
+                <p class="card-text">
+                  Enjoy a relaxing atmosphere while diving into exciting board
+                  games with friends. Indulge in our cosy café offerings, from
+                  aromatic coffees to savory snacks.
+                </p>
+              </div>
+              <div class="card-footer">
+                <p class="mb-0">€7 per person</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-md-6 col-xl-3">
+            <div class="card">
+              <img
+                src="assets/images/services-2.webp"
+                class="card-img-top"
+                alt="Board games stacked in bookshelves, a man can be seen browsing the shelves"
+              />
+              <div class="card-body">
+                <!-- bootstrap cards come as h5 by default, changed to h3 to fit project heading hierarchy -->
+                <h3 class="card-title sub-heading-color">Game library</h3>
+                <p class="card-text">
+                  Explore our collection of board games, ranging from classic
+                  favorites to the latest releases. Find the perfect game for
+                  any age, skill level, or interest.
+                </p>
+              </div>
+              <div class="card-footer">
+                <p class="mb-0">See prices in store</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-md-6 col-xl-3">
+            <div class="card">
+              <img src="assets/images/services-3.webp" class="card-img-top" />
+              <div class="card-body">
+                <h3 class="card-title sub-heading-color">Events</h3>
+                <p class="card-text">
+                  Join us for special game nights, tournaments, and themed
+                  events. A great opportunity to meet new people and test your
+                  gaming skills.
+                </p>
+              </div>
+              <div class="card-footer">
+                <p class="mb-0">From €5 per person</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-md-6 col-xl-3">
+            <div class="card">
+              <img
+                src="assets/images/services-4.webp"
+                class="card-img-top"
+                alt="A kids party being held at Boardwalk Games"
+              />
+              <div class="card-body">
+                <h3 class="card-title sub-heading-color">Kids parties</h3>
+                <p class="card-text">
+                  Celebrate your child's special day with us! We offer fun,
+                  game-filled party packages that are sure to delight young
+                  gamers and their friends.
+                </p>
+              </div>
+              <div class="card-footer">
+                <p class="mb-0">From €7 per child</p>
+              </div>
+            </div>
+          </div>
         </div>
       </section>
     </main>
@@ -213,20 +278,75 @@
           <div class="col-12 col-md-6 col-xl-4">
             <h3 class="sub-heading-color">Contact info</h3>
             <address>
-              <strong><i class="fa-solid fa-location-dot"></i>Boardwalk Games</strong><br>
-              123 Boardwalk<br>
+              <strong
+                ><i class="fa-solid fa-location-dot"></i>Boardwalk Games</strong
+              ><br />
+              123 Boardwalk<br />
               Boardwalk City,12345
             </address>
-            <p><i class="fa-solid fa-phone"></i>012 345 6789 <br>
-            <i class="fa-solid fa-paper-plane"></i>info@boardwalk-games.co</p>
-            <div class="social-links mt-4">
-              <a href="https://www.instagram.com/" target="_blank" aria-label="instagaram home page" rel="noopener"><i class="fa-brands fa-instagram"></i></a>
-              <a href="https://www.facebook.com/" target="_blank "aria-label="facebbok home page" rel="noopener"><i class="fa-brands fa-facebook"></i></a>
-              <a href="https://x.com/" target="_blank" aria-label="twitter home page" rel="noopener"><i class="fa-brands fa-x-twitter"></i></a>
+            <p>
+              <i class="fa-solid fa-phone"></i>012 345 6789 <br />
+              <i class="fa-solid fa-paper-plane"></i>info@boardwalk-games.co
+            </p>
+            <div class="social-links my-4">
+              <a
+                href="https://www.instagram.com/"
+                target="_blank"
+                aria-label="instagaram home page"
+                rel="noopener"
+                ><i class="fa-brands fa-instagram"></i
+              ></a>
+              <a
+                href="https://www.facebook.com/"
+                target="_blank "
+                aria-label="facebbok home page"
+                rel="noopener"
+                ><i class="fa-brands fa-facebook"></i
+              ></a>
+              <a
+                href="https://x.com/"
+                target="_blank"
+                aria-label="twitter home page"
+                rel="noopener"
+                ><i class="fa-brands fa-x-twitter"></i
+              ></a>
             </div>
           </div>
           <!--opening times-->
-          <div class="col-12 col-md-6 col-xl-4">opening times</div>
+          <div class="col-12 col-md-6 col-xl-4">
+            <h3 class="sub-heading-color">Opening times</h3>
+            <table class="table table-dark">
+              <thead>
+                <tr>
+                  <th scope="col">Day</th>
+                  <th scope="col">Open</th>
+                  <th scope="col">Close</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <th scope="row">Mon</th>
+                  <td colspan="2">Closed</td>
+                  
+                </tr>
+                <tr>
+                  <th scope="row">Tue - Thur</th>
+                  <td>11am</td>
+                  <td>11pm</td>
+                </tr>
+                <tr>
+                  <th scope="row">Fri - Sat</th>
+                  <td>11am</td>
+                  <td>12am</td>
+                </tr>
+                <tr>
+                  <th scope="row">Sun</th>
+                  <td>12pm</td>
+                  <td>7pm</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
         </div>
       </div>
     </footer>
