Add booking sucess page

--- a/game-library.html
+++ b/game-library.html
@@ -72,7 +72,7 @@
                 <a class="nav-link" href="index.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Servieces</a>
+                <a class="nav-link" href="index.html#services">Servieces</a>
               </li>
               <li class="nav-item">
                 <a
