--- a/booking.html
+++ b/booking.html
@@ -69,7 +69,7 @@
                 <a class="nav-link" href="index.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Servieces</a>
+                <a class="nav-link" href="index.html#services">Servieces</a>
               </li>
               <li class="nav-item">
                 <a
@@ -112,7 +112,7 @@
             <div class="row justify-content-center">
                 <div class="col-12 col-md-8">
                     <h2>Booking inquiry</h2>
-                    <form>
+                    <form action="success.html" method="GET">
                         <div class="row">
                             <div class="col-12 col-lg-6 mb-3">
                                 <label for="name" class="form-label">Name</label>
