style buttons to match color scheme

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Servieces</a>
+              <a class="nav-link" href="index.html#services">Servieces</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="game-library.html">Games</a>
@@ -81,7 +81,7 @@
               <a class="nav-link" href="#contact">Contact</a>
             </li>
             <li class="nav-item">
-                <a href="booking.html" class="btn btn-primary ms-lg-3" >Book Now</a>
+                <a href="booking.html" class="btn custom-button-filled ms-lg-3" >Book Now</a>
               </li>
           </ul>
         </div>
@@ -102,7 +102,7 @@
             ready for your next challenge, or a student gamer looking for a fun,
             affordable hangout, we've got you covered.
           </p>
-           <a href="booking.html" class="btn btn-primary mb-4" >Book Now</a>
+           <a href="booking.html" class="btn custom-button-outline mb-4" >Book Now</a>
         </div>
         <div class="col-12 col-xl-6">
           <div
