--- a/booking.html
+++ b/booking.html
@@ -83,7 +83,7 @@
                 <a class="nav-link" href="index.html#contact">Contact</a>
               </li>
               <li class="nav-item">
-                <a href="booking.html" class="btn btn-primary ms-lg-3" aria-current="page">Book Now</a>
+                <a href="booking.html" class="btn custom-button-filled ms-lg-3" aria-current="page">Book Now</a>
               </li>
             </ul>
           </div>
@@ -143,7 +143,7 @@
                             </div>
                         </div>
 
-                        <button type="submit" class="btn btn-primary">Submit</button>
+                        <button type="submit" class="btn custom-button-outline">Submit</button>
                     </form>
                 </div>
             </div>
