--- a/index.html
+++ b/index.html
@@ -72,7 +72,10 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="index.html#services">Servieces</a>
+              <a class="nav-link" href="index.html#services">Services</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#events">Events</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="game-library.html">Games</a>
@@ -81,8 +84,10 @@
               <a class="nav-link" href="#contact">Contact</a>
             </li>
             <li class="nav-item">
-                <a href="booking.html" class="btn custom-button-filled ms-lg-3" >Book Now</a>
-              </li>
+              <a href="booking.html" class="btn custom-button-filled ms-lg-3"
+                >Book Now</a
+              >
+            </li>
           </ul>
         </div>
       </div>
@@ -102,7 +107,9 @@
             ready for your next challenge, or a student gamer looking for a fun,
             affordable hangout, we've got you covered.
           </p>
-           <a href="booking.html" class="btn custom-button-outline mb-4" >Book Now</a>
+          <a href="booking.html" class="btn custom-button-outline mb-4"
+            >Book Now</a
+          >
         </div>
         <div class="col-12 col-xl-6">
           <div
@@ -269,7 +276,76 @@
           </div>
         </div>
       </section>
+      <!--Event with table-->
+      <section id="events" class="container section">
+        <div class="row">
+          <div class="col-12 text-center">
+            <h2 class="display-6">Join Our Events</h2>
+          </div>
+          <div class="col-12 col-xl-6">
+            <p class="my-4">
+              Whether you're delving into dungeons, reliving classic games, or
+              competing in high-stakes tournaments, there's something for every
+              gamer. Reservations are recommended to ensure your spot at the
+              table. Student discounts are available, so bring your student ID
+              and enjoy more gaming for less.
+            </p>
+            <p class="my-4">
+              Outside scheduled events, our shop remains open for regular play.
+              Join us anytime to discover new games and meet fellow enthusiasts.
+            </p>
+          </div>
+
+          <div class="col-12 col-xl-6">
+             <div class="table-responsive">
+            <table class="table table-hover  w-100">
+              <thead>
+                <tr>
+                  <th scope="col">Event</th>
+                  <th scope="col">Date</th>
+                  <th scope="col">Time</th>
+                  <th scope="col">Price</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <th scope="row">Dungeons & Dragons</th>
+                  <td>Tuesdays</td>
+                  <td>8pm - 11pm</td>
+                  <td>€25 for 6 sessions</td>
+                </tr>
+                <tr>
+                  <th scope="row">Retro Game Night</th>
+                  <td>Thursdays</td>
+                  <td>8pm - 11pm</td>
+                  <td>€5 per person*</td>
+                </tr>
+                <tr>
+                  <th scope="row">Tournaments</th>
+                  <td>Last Sunday of the month</td>
+                  <td>12pm - 7pm</td>
+                  <td colspan="2">€10 per person</td>
+                </tr>
+              </tbody>
+            </table>
+            </div>
+          </div>
+          <div id="offer" class="col-12 text-center">
+            <div
+              class="badge fw-bold text-wrap d-inline-block text-center text-xl-end custom-badge"
+            >
+              *Get 20% off with valid student ID
+            </div>
+          </div>
+          <div class="col-12 text-center">
+            <a href="booking.html" class="btn custom-button-outline mb-4"
+              >Book Now</a
+            >
+          </div>
+        </div>
+      </section>
     </main>
+
     <!--footer or contact section-->
     <!--mt-auto to push footer to bottom of the page-->
     <footer id="contact" class="mt-auto">
@@ -331,7 +407,6 @@
                 <tr>
                   <th scope="row">Mon</th>
                   <td colspan="2">Closed</td>
-                  
                 </tr>
                 <tr>
                   <th scope="row">Tue - Thur</th>
