add game reservation section in game library page

--- a/game-library.html
+++ b/game-library.html
@@ -86,7 +86,9 @@
                 <a class="nav-link" href="index.html#contact">Contact</a>
               </li>
               <li class="nav-item">
-                <a href="booking.html" class="btn custom-button-filled ms-lg-3" >Book Now</a>
+                <a href="booking.html" class="btn custom-button-filled ms-lg-3"
+                  >Book Now</a
+                >
               </li>
             </ul>
           </div>
@@ -244,9 +246,11 @@
                 alt=" Critter Quest board game box"
               />
               <div class="card-body">
-                <h3 class="card-title sub-heading-color"> Critter Quest</h3>
+                <h3 class="card-title sub-heading-color">Critter Quest</h3>
                 <p class="card-text">
-                  Solve simple puzzles, collect magical gems, and help friends along the way in this heartwarming journey of discovery and friendship.
+                  Solve simple puzzles, collect magical gems, and help friends
+                  along the way in this heartwarming journey of discovery and
+                  friendship.
                 </p>
                 <p><em>Number of players:</em>2-4</p>
                 <p><em>Ages:</em> 5+</p>
@@ -260,7 +264,7 @@
           <div class="col-12">
             <h2>Favourites</h2>
           </div>
-          <div class="col-12 col-md-6 col-xl-3"> 
+          <div class="col-12 col-md-6 col-xl-3">
             <div class="card">
               <img
                 class="card-img-top"
@@ -270,14 +274,16 @@
               <div class="card-body">
                 <h3 class="card-title sub-heading-color">Settlers of Catan</h3>
                 <p class="card-text">
-                  Picture yourself in the era of discoveries: after a long voyage of great deprivation, your ships have finally reached the coast of an uncharted island.
+                  Picture yourself in the era of discoveries: after a long
+                  voyage of great deprivation, your ships have finally reached
+                  the coast of an uncharted island.
                 </p>
                 <p><em>Number of players:</em>3-4</p>
                 <p><em>Ages:</em> 10+</p>
               </div>
             </div>
-        </div>
-          <div class="col-12 col-md-6 col-xl-3"> 
+          </div>
+          <div class="col-12 col-md-6 col-xl-3">
             <div class="card">
               <img
                 class="card-img-top"
@@ -287,14 +293,17 @@
               <div class="card-body">
                 <h3 class="card-title sub-heading-color">Monopoly</h3>
                 <p class="card-text">
-                  Featuring classic Monopoly gameplay, this favourite family board game is all about buying, selling, and trading properties to win.
+                  Featuring classic Monopoly gameplay, this favourite family
+                  board game is all about buying, selling, and trading
+                  properties to win.
                 </p>
                 <p><em>Number of players:</em>2-6</p>
                 <p><em>Ages:</em> 8+</p>
               </div>
-            </div></div>
+            </div>
+          </div>
           <div class="col-12 col-md-6 col-xl-3">
-             <div class="card">
+            <div class="card">
               <img
                 class="card-img-top"
                 src="assets/images/fav-games-3.webp"
@@ -303,12 +312,15 @@
               <div class="card-body">
                 <h3 class="card-title sub-heading-color">Exploding Kittens</h3>
                 <p class="card-text">
-                  Exploding Kittens is a kitty-powered version of Russian Roulette. Players take turns drawing cards until someone draws an exploding kitten card and loses the game!
+                  Exploding Kittens is a kitty-powered version of Russian
+                  Roulette. Players take turns drawing cards until someone draws
+                  an exploding kitten card and loses the game!
                 </p>
                 <p><em>Number of players:</em>2-5</p>
                 <p><em>Ages:</em> 7+</p>
               </div>
-            </div></div>
+            </div>
+          </div>
           <div class="col-12 col-md-6 col-xl-3">
             <div class="card">
               <img
@@ -319,14 +331,106 @@
               <div class="card-body">
                 <h3 class="card-title sub-heading-color">Cluedo</h3>
                 <p class="card-text">
-                  The classic game of mystery and suspense. Cluedo has 6 suspects, 6 weapons and also a whole maze of possible murder scenes to explore. It's up to you to question the suspects and crack the case.
+                  The classic game of mystery and suspense. Cluedo has 6
+                  suspects, 6 weapons and also a whole maze of possible murder
+                  scenes to explore. It's up to you to question the suspects and
+                  crack the case.
                 </p>
                 <p><em>Number of players:</em>2-6</p>
                 <p><em>Ages:</em> 8+</p>
               </div>
             </div>
+          </div>
         </div>
+      </section>
+      <section id="reserve-game" class="container section">
+        <div class="col-12 text-center">
+          <h2 class="display-6">Reserve a game</h2>
         </div>
+        <div class="col-12">
+          <p class="my-4">
+            Reserve a board game for your next visit to Boardwalk Games. Pick
+            your challenge, and let the adventure begin! Fill out your details
+            and preferred game below, and we'll have it set aside for you when
+            you arrive.
+          </p>
+        </div>
+        <section id="reserving-form">
+          <div class="row justify-content-center">
+            <div class="col-12 col-md-8">
+              <form action="success.html" method="GET">
+                <div class="row">
+                  <div class="col-12 col-lg-4 mb-3">
+                    <label for="name" class="form-label">Name</label>
+                    <input
+                      class="form-control"
+                      id="name"
+                      name="name"
+                      type="text"
+                      required
+                    />
+                  </div>
+                  <div class="col-12 col-lg-4 mb-3">
+                    <label for="email" class="form-label">Email</label>
+                    <input
+                      class="form-control"
+                      id="email"
+                      name="email"
+                      type="email"
+                      required
+                    />
+                  </div>
+                  <div class="col-12 col-lg-4 mb-3">
+                    <label for="phone" class="form-label">Phone number</label>
+                    <input
+                      class="form-control"
+                      id="phone"
+                      name="phone"
+                      type="number"
+                      required
+                    />
+                  </div>
+                  <div class="col-12 col-lg-6 mb-3">
+                    <label for="event-type" class="form-label"
+                      >Event type</label
+                    >
+                    <select
+                      id="event-type"
+                      class="form-select"
+                      name="event-type"
+                      required
+                    >
+                      <option value="" selected>Select</option>
+                      <option value="pioneers">Galaxy Pioneers</option>
+                      <option value="mystic">Mystic Woods</option>
+                      <option value="gambit">Captain's Gambit</option>
+                      <option value="critter">Critter Quest</option>
+                      <option value="setters">Setters of Catan</option>
+                      <option value="monopoly">Monopoly</option>
+                      <option value="exploding">Exploding Kittens</option>
+                      <option value="cluedo">Cluedo/option>
+                    </select>
+                  </div>
+                  <div class="col-12 col-lg-6 mb-3">
+                    <label for="date" class="form-label">Selected Date</label>
+                    <input
+                      class="form-control"
+                      id="date"
+                      name="date"
+                      type="date"
+                      required
+                    />
+                  </div>
+                </div>
+                <div class="d-flex justify-content-end mt-3">
+                  <button type="submit" class="btn custom-button-outline">
+                    Submit
+                  </button>
+                </div>
+              </form>
+            </div>
+          </div>
+        </section>
       </section>
     </main>
     <!--footer or contact section-->
@@ -390,7 +494,6 @@
                 <tr>
                   <th scope="row">Mon</th>
                   <td colspan="2">Closed</td>
-                  
                 </tr>
                 <tr>
                   <th scope="row">Tue - Thur</th>
