--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="index.html#services">Services</a>
+              <a class="nav-link" href="#serviece">Services</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#events">Events</a>
@@ -97,9 +97,9 @@
       <div class="row">
         <div class="col-12 col-xl-6 text-center text-xl-start">
           <h1 class="display-3">Boardwalk Games</h1>
-          <p class="lead display-6 sub-heading-color">
+          <h3 class="lead display-6 sub-heading-color">
             Your next adventure is waiting!
-          </p>
+          </h3>
           <p class="my-4">
             Welcome to Boardwalk Games, Your Ultimate Gaming Getaway! Escape
             into the world of board games and café delights. Whether you're a
