--- a/booking.html
+++ b/booking.html
@@ -43,7 +43,7 @@
   <body class="d-flex flex-column min-vh-100">
     <!--Navigation-->
     <div>
-      <nav id="nav-bar" class="navbar navbar-expand-lg" data-bs-theme="dark">
+      <nav id="nav-bar" class="navbar navbar-expand-lg fixed-top" data-bs-theme="dark">
         <div class="container-fluid">
           <a class="navbar-brand" href="index.html">
             <img
