tidying html code according to htmal validator

--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
           </div>
           <div class="col-12 col-md-6 col-xl-3">
             <div class="card">
-              <img src="assets/images/services-3.webp" class="card-img-top" />
+              <img src="assets/images/services-3.webp" class="card-img-top" alt="group of people olaying chess" />
               <div class="card-body">
                 <h3 class="card-title sub-heading-color">Events</h3>
                 <p class="card-text">
@@ -345,7 +345,7 @@
                   <th scope="row">Tournaments</th>
                   <td>Last Sunday of the month</td>
                   <td>12pm - 7pm</td>
-                  <td colspan="2">€10 per person</td>
+                  <td>€10 per person</td>
                 </tr>
               </tbody>
             </table>
@@ -399,7 +399,7 @@
               ></a>
               <a
                 href="https://www.facebook.com/"
-                target="_blank "
+                target="_blank"
                 aria-label="facebbok home page"
                 rel="noopener"
                 ><i class="fa-brands fa-facebook"></i
